# flutter_dart-ffi_golang_demo

./: .envrc  .metadata  ffigen_golang.yaml  go.work  pubspec.yaml
android/: build.gradle
example/: pubspec.yaml
example/android/: build.gradle.kts  settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/kotlin/com/example/native_add_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
lib/: dylib_utils.dart  main.dart  native_add_golang.dart  native_add_golang_bindings_generated.dart
src/: CMakeLists.txt  CMakePresets.json  api_logger_android.go  api_logger_interface.go  api_logger_ios.go  build_by_cmake.sh  go.mod  libnativeffi.h  makefile  native_add_golang.go  output_build_stdout.sh  severity_string.go
